<resources>
    <string name="app_name">Doctor</string>
    <string name="action_settings">Settings</string>

    <!--Roboto Fonts-->
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>

    <string name="text_comments">Comments</string>
    <string name="comment_title">Comment!</string>
    <string name="no_comment_msg">There are no comments for this issue</string>
    <string name="dialog_button_close">Close</string>
    <string name="sorry_header">Sorry!</string>
    <string name="generic_failure_desc">Something went wrong. Please try again.</string>
    <string name="internet_con">Please check your internet connection and try again later.</string>
    <string name="retry">Retry</string>
    <string name="rails_open_issues">Rails Open Issues</string>
</resources>
