<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_white"
    android:orientation="vertical">


    <TextView
        android:id="@+id/item_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_list_item"
        android:fontFamily="@string/roboto_regular"
        android:gravity="center"
        android:paddingLeft="@dimen/margin_xlarge"
        android:paddingRight="@dimen/margin_xlarge"
        android:text="@string/comment_title"
        android:textColor="@color/black_text"
        android:textSize="@dimen/medium"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/margin_xxlarge"
        android:layout_marginRight="@dimen/margin_xxlarge"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/separator_grey_light_line" />

    <TextView
        android:id="@+id/item_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:layout_marginLeft="@dimen/margin_xlarge"
        android:layout_marginRight="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_medium"
        android:fontFamily="@string/roboto_regular"
        android:gravity="center"
        android:paddingLeft="@dimen/margin_xlarge"
        android:paddingRight="@dimen/margin_xlarge"
        android:text="@string/no_comment_msg"
        android:textColor="@color/black_text"
        android:textSize="@dimen/xsmall" />

    <Button
        android:id="@+id/button_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_rounded_bottom"
        android:fontFamily="@string/roboto_regular"
        android:text="@string/dialog_button_close"
        android:textAllCaps="true"
        android:textColor="@drawable/text_black_button_selector" />

</LinearLayout>